examples/test/testpolicy17869.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17869
  namespace: namespace472
spec:
  podSelector:
    matchLabels:
      key6: value41
      key19: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value13
      podSelector:
        matchLabels:
          key9: value29
          key11: value19
